--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
             name 'Google'
         }
         google()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
@@ -16,20 +17,6 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
-
-ext {
-    compileSdkVersion = 21
-    buildToolsVersion = "21.1.1"
-
-    minSdkVersion = 9
-    targetSdkVersion = 21
-    versionCode = 1
-    versionName = "1.0"
-    androidSupport = 'com.android.support:support-v4:22.0.0'
-    bolts = 'com.parse.bolts:bolts-android:1.2.0'
-
-}
-
 
 project.ext {
     VERSION_NAME = '1.1.3-SNAPSHOT'
